# fix-my-takeout

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: release_verify.py  release_wizard.py
src/: app.html
src-tauri/: Cargo.toml  Info.plist  fix-my-takeout.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: mod.rs  queries.rs  recovery.rs  schema.rs
src-tauri/src/fs/: collision.rs  disk_check.rs  mod.rs  safe_move.rs  sanitize.rs
src-tauri/src/metadata/: album_info_json.rs  apple_date.rs  classifier.rs  exif.rs  filename_parser.rs  google_takeout_json.rs  mod.rs  photo_details_csv.rs  shared_library_csv.rs  subscribed_albums_json.rs
src-tauri/src/pipeline/: cataloger.rs  dedup.rs  extractor.rs  metadata_loader.rs  mod.rs  orchestrator.rs  organizer.rs  pairer.rs  reporter.rs  symlinker.rs
src-tauri/src/progress/: tracker.rs
src/lib/: tauri.js
src/lib/components/: Done.svelte  Processing.svelte  Welcome.svelte
src/lib/stores/: progress.js  settings.js  zipStatus.js
src/routes/: +page.svelte
