[package]
name = "fix-my-takeout"
version = "1.0.3"
description = "Fix your iCloud and Google Photos export — organize, deduplicate, and restore your photo library"
authors = ["Johannes"]
edition = "2021"

[lib]
name = "fix_my_takeout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "2"
kamadak-exif = "0.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
regex = "1"
log = "0.4"
env_logger = "0.11"
unicode-normalization = "0.1"
thiserror = "1"
